--- a/CSS/aboutme.css
+++ b/CSS/aboutme.css
@@ -1,27 +1,20 @@
 body {
-    background-color: black;
+    background-color: rgb(255, 255, 255);
     margin: 0;
 }
 
 nav {
-    background-color: rgb(36, 36, 36);
+    background-color: rgb(184, 184, 184);
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-}
-
-.presentation {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 25px;
 }
 
 h1,
 p,
 a {
     font-size: 25px;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-decoration: none;
     margin: 5px;
@@ -31,4 +24,11 @@ a {
 main img {
     border-radius: 100px;
     border: solid white 3px;
+}
+
+.quiensoy {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 25px;
 }
