--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,31 +1,30 @@
 body {
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     margin: 0;
 }
 
 nav {
-    background-color: rgb(36, 36, 36);
+    background-color: rgb(49, 49, 49);
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+}
+
+.presentation {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 25px;
 }
 
 h1,
 p,
 a {
     font-size: 25px;
-    color: aliceblue;
+    color: rgb(255, 255, 255);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-decoration: none;
     margin: 5px;
-
-}
-
-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 25px;
 
 }
 
