--- a/CSS/skills.css
+++ b/CSS/skills.css
@@ -1,32 +1,26 @@
-body {
-    background-color: rgb(255, 255, 255);
-    margin: 0;
-}
-
-nav {
-    background-color: rgb(117, 117, 117);
+.nav {
+    background-color: rgb(204, 204, 204);
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 
-h1,
-p,
-a {
+.nav-link {
     font-size: 25px;
-    color: rgb(0, 0, 0);
+    color: black;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-decoration: none;
-    margin: 5px;
-
 }
 
-
-.conteiner, .col, .row {
-    margin: 30px;
+.nav-link:hover {
+    transition: 0.1s;
+    font-size: 30px;
+    color: black;
 }
-img {
-    width: 50px;
-    border-radius: 30px;
 
+main {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
