--- a/CSS/aboutme.css
+++ b/CSS/aboutme.css
@@ -1,5 +1,8 @@
+body {
+    background-color: white;
+}
 .nav {
-    background-color: rgb(204, 204, 204);
+    background-color: rgb(100, 100, 100);
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -12,15 +15,16 @@
 }
 
 .nav-link:hover {
+    background-color: black;
     transition: 0.1s;
     font-size: 30px;
-    color: black;
+    color: rgb(238, 238, 238);
 }
 
 main {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin-left: 150px;
-    margin-right: 150px;
+    margin-left: 250px;
+    margin-right: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
