--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,8 @@
+body {
+    background-color: rgb(24, 24, 24);
+}
 .nav {
-    background-color: rgb(204, 204, 204);
+    background-color: rgb(177, 177, 177);
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -7,21 +10,28 @@
 
 .nav-link {
     font-size: 25px;
-    color: black;
+    color: aliceblue;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .nav-link:hover {
+    background-color: white;
     transition: 0.1s;
     font-size: 30px;
     color: black;
 }
 
 main {
+    display: flex;
+    color: aliceblue;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin-left: 150px;
-    margin-right: 150px;
+    margin-left: 250px;
+    margin-right: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+ main img {
+    border-radius: 200px;
+    border: solid rgb(255, 255, 255) 3px
 }
