--- a/CSS/skills.css
+++ b/CSS/skills.css
@@ -1,3 +1,6 @@
+body {
+    background-color: gray;
+}
 .nav {
     background-color: rgb(204, 204, 204);
     display: flex;
@@ -11,11 +14,12 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.nav-link:hover {
-    transition: 0.1s;
-    font-size: 30px;
-    color: black;
+
+.nav-link img:hover {
+    transition: 2;
+    width:150px;
 }
+
 
 main {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -23,4 +27,10 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+footer {
+    display: flex;
+    justify-content: end;
+    color: rgb(255, 255, 255);
 }
