--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,8 +1,9 @@
 body {
-    background-color: rgb(24, 24, 24);
+    background-color: rgb(43, 43, 43);
 }
+
 .nav {
-    background-color: rgb(177, 177, 177);
+    background-color: rgb(204, 204, 204);
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -21,6 +22,13 @@ body {
     color: black;
 }
 
+#vector:hover{
+    transition: 0.1s;
+    width: 100px;
+
+}
+
+
 main {
     display: flex;
     color: aliceblue;
@@ -31,7 +39,8 @@ main {
     flex-direction: column;
     align-items: center;
 }
- main img {
+
+main img {
     border-radius: 200px;
     border: solid rgb(255, 255, 255) 3px
 }
