--- a/CSS/contactme.css
+++ b/CSS/contactme.css
@@ -1,9 +1,8 @@
 body {
-    background-color: rgb(214, 214, 214);
-}
-
-.nav {
     background-color: rgb(0, 0, 0);
+}
+.nav {
+    background-color: rgb(255, 255, 255);
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -11,61 +10,39 @@ body {
 
 .nav-link {
     font-size: 25px;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .nav-link:hover {
-    background-color: white;
+    background-color: rgb(122, 122, 122);
     transition: 0.1s;
     font-size: 30px;
-    color: black;
+    color: rgb(255, 255, 255);
 }
 
 
 main {
+    color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    padding: 50px;
+    margin-left: 250px;
+    margin-right: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-footer {
-    display: flex;
-    justify-content: end;
-    color: rgb(255, 255, 255);
-}
-
-.row,
-.col {
-    display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 main img {
-    margin: 10px;
-    transition: 0.1 all;
-
+    border-radius: 200px;
 }
 
 main img:hover {
+    transition: 0.1;
     width: 120px;
 }
-
-.container-text-center {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.skills {
-    display: flex;
-    flex-direction: column;
-}
-
 footer {
+    color: white;
     display: flex;
     justify-content: start;
 }
