--- a/CSS/aboutme.css
+++ b/CSS/aboutme.css
@@ -1,6 +1,7 @@
 body {
     background-color: white;
 }
+
 .nav {
     background-color: rgb(100, 100, 100);
     display: flex;
@@ -9,6 +10,7 @@ body {
 }
 
 .nav-link {
+    transition: 0.1s;
     font-size: 25px;
     color: black;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -16,8 +18,7 @@ body {
 
 .nav-link:hover {
     background-color: black;
-    transition: 0.1s;
-    font-size: 30px;
+    transform: scale(1.2);
     color: rgb(238, 238, 238);
 }
 
@@ -36,7 +37,11 @@ main img {
     border: solid black 3px
 }
 
-footer {
+footer h1 {
     display: flex;
-    justify-content: start;
+    justify-content: end;
+    align-items: end;
+    float: left;
+    color: rgb(71, 71, 71);
+    font-size: 10px;
 }
