--- a/CSS/contactme.css
+++ b/CSS/contactme.css
@@ -1,6 +1,7 @@
 body {
     background-color: rgb(0, 0, 0);
 }
+
 .nav {
     background-color: rgb(255, 255, 255);
     display: flex;
@@ -9,6 +10,7 @@ body {
 }
 
 .nav-link {
+    transition: 0.1s;
     font-size: 25px;
     color: rgb(0, 0, 0);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -16,8 +18,7 @@ body {
 
 .nav-link:hover {
     background-color: rgb(122, 122, 122);
-    transition: 0.1s;
-    font-size: 30px;
+    transform: scale(1.2);
     color: rgb(255, 255, 255);
 }
 
@@ -34,15 +35,18 @@ main {
 }
 
 main img {
-    border-radius: 200px;
+    transition: 0.1s;
 }
 
 main img:hover {
-    transition: 0.1;
-    width: 120px;
+    transform: scale(1.2);
 }
-footer {
-    color: white;
+
+footer h1 {
     display: flex;
-    justify-content: start;
+    justify-content: end;
+    align-items: end;
+    float: left;
+    color: rgb(197, 197, 197);
+    font-size: 10px;
 }
