--- a/CSS/index.css
+++ b/CSS/index.css
@@ -10,6 +10,7 @@ body {
 }
 
 .nav-link {
+    transition: 0.1s;
     font-size: 25px;
     color: rgb(255, 255, 255);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -17,8 +18,7 @@ body {
 
 .nav-link:hover {
     background-color: white;
-    transition: 0.1s;
-    font-size: 30px;
+    transform: scale(1.2);
     color: black;
 }
 
@@ -38,8 +38,8 @@ main img {
     border: solid rgb(255, 255, 255) 3px
 }
 
-footer {
+footer h1 {
+    float: left;
     color: white;
-    display: flex;
-    justify-content: start;
+    font-size: 10px;
 }
