--- a/CSS/skills.css
+++ b/CSS/skills.css
@@ -10,15 +10,15 @@ body {
 }
 
 .nav-link {
+    transition: 0.1s;
     font-size: 25px;
     color: rgb(255, 255, 255);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .nav-link:hover {
+    transform: scale(1.2);
     background-color: white;
-    transition: 0.1s;
-    font-size: 30px;
     color: black;
 }
 
@@ -31,12 +31,6 @@ main {
     align-items: center;
 }
 
-footer {
-    display: flex;
-    justify-content: end;
-    color: rgb(255, 255, 255);
-}
-
 .row,
 .col {
     display: flex;
@@ -45,14 +39,13 @@ footer {
 }
 
 main img {
-    margin: 10px;
-    transition: 0.1 all;
-
+    transition: 0.1s;
 }
 
 main img:hover {
-    width: 120px;
+    transform: scale(1.2);
 }
+
 
 .container-text-center {
     display: flex;
@@ -65,7 +58,8 @@ main img:hover {
     flex-direction: column;
 }
 
-footer {
-    display: flex;
-    justify-content: start;
+footer h1 {
+    float: left;
+    color: white;
+    font-size: 10px;
 }
