--- a/CSS/aboutme.css
+++ b/CSS/aboutme.css
@@ -45,3 +45,13 @@ footer h1 {
     color: rgb(71, 71, 71);
     font-size: 10px;
 }
+
+@media screen and (max-width: 720px) {
+    main {
+        display: flex;
+justify-content: center;        color: rgb(0, 0, 0);
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+}
