--- a/CSS/index.css
+++ b/CSS/index.css
@@ -24,13 +24,13 @@ body {
 
 main {
     display: flex;
-    color: aliceblue;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin-left: 250px;
-    margin-right: 250px;
-    display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    color: aliceblue;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin-left: 200px;
+    margin-right: 200px;
 }
 
 main img {
@@ -42,4 +42,15 @@ footer h1 {
     float: left;
     color: white;
     font-size: 10px;
+}
+
+@media screen and (max-width: 1080px) {
+    main {
+        display: flex;
+        align-items: center;
+        color: aliceblue;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
 }
