--- a/CSS/skills.css
+++ b/CSS/skills.css
@@ -18,17 +18,20 @@ body {
 
 .nav-link:hover {
     transform: scale(1.2);
-    background-color: white;
-    color: black;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 
 
 main {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    padding: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    color: rgb(0, 0, 0);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin-left: 200px;
+    margin-right: 200px;
 }
 
 .row,
@@ -62,4 +65,15 @@ footer h1 {
     float: left;
     color: white;
     font-size: 10px;
+}
+
+@media screen and (max-width: 1080px) {
+    main {
+        display: flex;
+        align-items: center;
+        color: rgb(0, 0, 0);
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
 }
