--- a/CSS/aboutme.css
+++ b/CSS/aboutme.css
@@ -17,41 +17,38 @@ body {
 }
 
 .nav-link:hover {
-    background-color: black;
     transform: scale(1.2);
+    background-color: black;
     color: rgb(238, 238, 238);
 }
 
 main {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin-left: 250px;
-    margin-right: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-
 
 main img {
     border-radius: 200px;
     border: solid black 3px
 }
 
-footer h1 {
+.content{
     display: flex;
-    justify-content: end;
-    align-items: end;
-    float: left;
-    color: rgb(71, 71, 71);
-    font-size: 10px;
+    flex-direction: column;
+    width: 50%;
+    align-items: center;
+    text-align: center;
 }
 
 @media screen and (max-width: 720px) {
-    main {
+    .content {
         display: flex;
-justify-content: center;        color: rgb(0, 0, 0);
+        align-items: center;
+        color: rgb(0, 0, 0);
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        margin-left: 5%;
-        margin-right: 5%;
+        width: 100%;
+
     }
 }
