--- a/CSS/contactme.css
+++ b/CSS/contactme.css
@@ -26,11 +26,8 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    color: rgb(255, 255, 255);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin-left: 200px;
-    margin-right: 200px;
+    color: aliceblue;
 }
 
 main img {
@@ -41,19 +38,20 @@ main img:hover {
     transform: scale(1.2);
 }
 
-footer h1 {
-    float: left;
-    color: white;
-    font-size: 10px;
+.content {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    align-items: center;
+    text-align: center;
 }
 
 @media screen and (max-width: 1080px) {
-    main {
+    .content {
         display: flex;
         align-items: center;
         color: aliceblue;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        margin-left: 5%;
-        margin-right: 5%;
+        width: 100%;
     }
 }
