--- a/CSS/skills.css
+++ b/CSS/skills.css
@@ -22,23 +22,12 @@ body {
     color: rgb(0, 0, 0);
 }
 
-
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    color: rgb(0, 0, 0);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin-left: 200px;
-    margin-right: 200px;
-}
-
-.row,
-.col {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    color: black;
 }
 
 main img {
@@ -49,6 +38,12 @@ main img:hover {
     transform: scale(1.2);
 }
 
+.row,
+.col {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .container-text-center {
     display: flex;
@@ -61,19 +56,21 @@ main img:hover {
     flex-direction: column;
 }
 
-footer h1 {
-    float: left;
-    color: white;
-    font-size: 10px;
+.content{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    align-items: center;
+    text-align: center;
 }
 
 @media screen and (max-width: 1080px) {
-    main {
+    .content {
         display: flex;
         align-items: center;
         color: rgb(0, 0, 0);
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        margin-left: 5%;
-        margin-right: 5%;
+        width: 100%;
+
     }
 }
