Se añadióf Footer

--- a/CSS/aboutme.css
+++ b/CSS/aboutme.css
@@ -42,6 +42,16 @@ main img {
     text-align: center;
 }
 
+footer {
+    height: 75px;
+    background-color: white(43, 43, 43);
+    color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    padding-right: 10px;
+}
+
 @media screen and (max-width: 720px) {
     .content {
         display: flex;
