--- a/CSS/contactme.css
+++ b/CSS/contactme.css
@@ -46,12 +46,31 @@ main img:hover {
     text-align: center;
 }
 
-@media screen and (max-width: 1080px) {
+footer {
+    background-color: rgb(0, 0, 0);
+    color: aliceblue;
+    display: flex;
+    justify-content: end;
+    align-items: end;
+
+}
+
+@media (max-width: 1080px) {
     .content {
         display: flex;
         align-items: center;
         color: aliceblue;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         width: 100%;
+    }
+}
+/*este estilo aplica al main y empuja todo lo que este debajo lo mas abajo posible*/
+.empujador{
+    height: 81vh;
+}
+
+@media (max-width: 768px){
+    .empujador{
+        height: auto;
     }
 }
