--- a/CSS/index.css
+++ b/CSS/index.css
@@ -43,6 +43,16 @@ main img {
     text-align: center;
 }
 
+footer {
+    height: 75px;
+    background-color: rgb(43, 43, 43);
+    color: aliceblue;
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    padding-right: 10px;
+}
+
 @media screen and (max-width: 700px) {
     .content {
         display: flex;
