--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,64 +1,66 @@
 body {
-    background-color: rgb(43, 43, 43);
+  background-color: rgb(43, 43, 43);
 }
 
 .nav {
-    background-color: rgb(204, 204, 204);
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+  background-color: rgb(204, 204, 204);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .nav-link {
-    transition: 0.1s;
-    font-size: 25px;
-    color: rgb(255, 255, 255);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  transition: 0.1s;
+  font-size: 25px;
+  color: rgb(255, 255, 255);
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .nav-link:hover {
-    transform: scale(1.2);
-    background-color: white;
-    color: black;
+  transform: scale(1.2);
+  background-color: white;
+  color: black;
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: aliceblue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  color: aliceblue;
 }
 
 main img {
-    border-radius: 200px;
-    border: solid rgb(255, 255, 255) 3px
+  border-radius: 200px;
+  border: solid rgb(255, 255, 255) 3px;
 }
 
-.content{
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    align-items: center;
-    text-align: center;
+.content {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  align-items: center;
+  text-align: center;
 }
 
 footer {
-    height: 75px;
-    background-color: rgb(43, 43, 43);
-    color: aliceblue;
-    display: flex;
-    justify-content: end;
-    align-items: end;
-    padding-right: 10px;
+  height: 75px;
+  background-color: rgb(43, 43, 43);
+  color: aliceblue;
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  padding-right: 10px;
 }
 
 @media screen and (max-width: 700px) {
-    .content {
-        display: flex;
-        align-items: center;
-        color: aliceblue;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        width: 100%;
-    }
+  .content {
+    display: flex;
+    align-items: center;
+    color: aliceblue;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    width: 100%;
+  }
 }
