--- a/CSS/skills.css
+++ b/CSS/skills.css
@@ -1,86 +1,87 @@
 body {
-    background-color: rgb(214, 214, 214);
+  background-color: rgb(214, 214, 214);
 }
 
 .nav {
-    background-color: rgb(0, 0, 0);
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+  background-color: rgb(0, 0, 0);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .nav-link {
-    transition: 0.1s;
-    font-size: 25px;
-    color: rgb(255, 255, 255);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  transition: 0.1s;
+  font-size: 25px;
+  color: rgb(255, 255, 255);
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .nav-link:hover {
-    transform: scale(1.2);
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
+  transform: scale(1.2);
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  color: black;
 }
 
 main img {
-    transition: 0.1s;
+  transition: 0.1s;
 }
 
 main img:hover {
-    transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .row,
 .col {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .container-text-center {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .skills {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
-.content{
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    align-items: center;
-    text-align: center;
+.content {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  align-items: center;
+  text-align: center;
 }
 
 footer {
-    height: 75px;
-    background-color: rgb(214, 214, 214);
-    color: rgb(0, 0, 0);
-    display: flex;
-    justify-content: end;
-    align-items: end;
-    padding-right: 10px;
+  height: 75px;
+  background-color: rgb(214, 214, 214);
+  color: rgb(0, 0, 0);
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  padding-right: 10px;
 }
 
 @media screen and (max-width: 1080px) {
-    .content {
-        display: flex;
-        align-items: center;
-        color: rgb(0, 0, 0);
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        width: 100%;
-
-    }
+  .content {
+    display: flex;
+    align-items: center;
+    color: rgb(0, 0, 0);
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    width: 100%;
+  }
 }
